Revise hero section for clarity and accessibility
Updated hero section with new phrases and improved accessibility.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
     <section class="hero" id="home">
       <div class="hero-inner">
         <h1>Silas Tyokaha</h1>
-        <p class="subtitle">I build clean UIs — <span id="typed"></span></p>
-        <p class="cta">
-          <a class="btn" href="#projects">View projects</a>
-          <a class="btn ghost" href="#contact">Contact</a>
-        </p>
+        <h1>I build <span class="type-wrap" aria-hidden="true">
+  <span class="phrase">fast interfaces</span>
+  <span class="phrase">accessible UI</span>
+  <span class="phrase">maintainable code</span>
+</span></h1>
+
+<!-- screen-reader friendly fallback (optional) -->
+<p class="sr-only" aria-live="polite">fast interfaces, accessible UI, maintainable code</p>
       </div>
       <div class="hero-card" aria-hidden="true">
         <pre>// simple, fast, maintainable UI</pre>
