Update tagline and about section in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="site-header">
     <div class="container header-grid">
       <div>
-        <p class="tagline">Frontend • Backend • Mobile • AI/ML tooling</p>
+        <p class="tagline">Frontend • Backend • AI/ML tooling</p>
       </div>
       <nav class="nav">
         <a href="https://github.com/silassdev" target="_blank" rel="noopener">GitHub</a>
@@ -28,9 +28,9 @@
     <div class="container">
       <h2>About</h2>
       <p class="about-lead">
-        I'm Silas Tyokaha — I build polished interfaces, reliable APIs, mobile apps and experiment with AI tooling and generative techniques.
+        I'm Silas Tyokaha — I build polished interfaces, reliable APIs, web applications and experiment with AI tooling and generative techniques.
         My core stack is JavaScript and Laravel. I integrate AI and build robust, RESTful APIs while practicing DevOps, caching and performance optimizations to reduce memory use and improve scalability.
-        I'm currently learning C++.
+        I'm currently learning C++ and Object-Oriented Programming
       </p>
     </div>
   </section>
