Change 'About' heading to 'Hola!'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
   <section id="about-top" class="about-top">
     <div class="container">
-      <h2>About</h2>
+      <h2>Hola!</h2>
       <p class="about-lead">
         I'm Silas Tyokaha — I build polished interfaces, reliable APIs, web applications and experiment with AI tooling and generative techniques.
         My core stack is JavaScript and Laravel. I integrate AI and build robust, RESTful APIs while practicing DevOps, caching and performance optimizations to reduce memory use and improve scalability.
