Replace canvas with img for profile preview

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="hero-right" aria-hidden="false">
         <div class="image-frame" id="imageFrame">
-          <canvas id="previewCanvas" width="600" height="400" aria-label="Black and white image preview"></canvas>
+        <img id="profileImage" src="silas.png" alt="Silas Tyokaha — profile" />         
           <div class="image-fallback">No image. Upload to preview.</div>
         </div>
       </div>
