--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="hero-right" aria-hidden="false">
         <div class="image-frame" id="imageFrame">
-        <img id="profileImage" src="silas.png" alt="Silas Tyokaha — profile" />         
+        <img id="profileImage" src="IMG_8314.jpeg" alt="Silas Tyokaha — profile" />         
           <div class="image-fallback">No image. Upload to preview.</div>
         </div>
       </div>
