--- a/index.html
+++ b/index.html
@@ -1,154 +1,161 @@
 <!doctype html>
+
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Silas Tyokaha — Frontend, Backend, Mobile, AI/ML tooling. Black & white developer portfolio." />
-  <title>Silas Tyokaha — Developer</title>
+  <title>Silas Tyokaha — Developer</title>  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3EST%3C/text%3E%3C/svg%3E">  <style>
+    :root{--max:1000px}
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial,"Noto Sans",sans-serif;
+      color:#0b0b0b;
+      background:#fff;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      line-height:1.45;
+      padding:32px 20px;
+    }
+    .container{max-width:var(--max);margin:0 auto}
 
-  <link rel="stylesheet" href="styles.css" />
+    header.site-header{display:flex;align-items:center;justify-content:space-between;margin-bottom:32px}
+    .brand{display:flex;flex-direction:column}
+    .brand .name{font-weight:700;font-size:20px;letter-spacing:0.02em}
+    .brand .role{font-size:12px;color:#444;margin-top:4px}
 
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>ST</text></svg>">
-</head>
+    nav.nav{display:flex;gap:14px;align-items:center}
+    nav.nav a{color:inherit;text-decoration:none;font-size:14px}
+
+    .hero{display:grid;grid-template-columns:1fr 320px;gap:36px;align-items:start;margin-bottom:36px}
+    @media (max-width:900px){.hero{grid-template-columns:1fr;}}
+
+    .hero-left h1{font-size:44px;margin:0 0 10px 0;letter-spacing:-0.02em}
+    .hero-left p.lead{margin:0 0 18px 0;color:#222}
+
+    .meta-grid{display:grid;grid-template-columns:repeat(1,1fr);gap:10px}
+    @media (min-width:720px){.meta-grid{grid-template-columns:repeat(3,1fr)}}
+    .meta-grid strong{display:block;margin-bottom:6px}
+
+    /* chips */
+    .chips{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
+    .chip{border:1px solid #111;padding:6px 10px;border-radius:999px;font-size:13px}
+
+    .section{padding:28px 0;border-top:1px solid #eee}
+    .section h3{margin:0 0 12px 0}
+
+    .footer-section p{margin:0}
+
+    footer.site-footer{margin-top:40px;padding-top:22px;border-top:1px solid #eee;color:#444;font-size:13px}
+
+    /* minimalist vertical label for employer */
+    .employer{font-size:12px;color:#111;border:1px solid #111;padding:6px 10px;border-radius:6px;text-decoration:none}
+
+    /* subtle focus states */
+    a:focus{outline:3px solid rgba(0,0,0,0.08);outline-offset:2px}
+  </style></head>
 <body>
-  <header class="site-header">
-    <div class="container header-grid">
-      <div>
-        <p class="tagline">Frontend • Backend • AI/ML tooling</p>
+  <div class="container">
+    <header class="site-header">
+      <div class="brand">
+        <div class="name">Silas Tyokaha</div>
+        <div class="role">Web developer — Frontend • Backend • AI/ML tooling</div>
+      </div><nav class="nav" aria-label="Primary">
+    <a class="employer" href="https://allpilar.xyz" target="_blank" rel="noopener">Web developer @ allpilar.xyz</a>
+    <a href="https://github.com/silassdev" target="_blank" rel="noopener">GitHub</a>
+    <a href="#about">About</a>
+    <a href="#stack">Stack</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+
+<main>
+  <section class="hero" aria-labelledby="hero-title">
+    <div class="hero-left">
+      <h1 id="hero-title">Minimal, focused web apps and APIs.</h1>
+      <p class="lead">I design and ship production-ready frontends, backend services and AI tooling. My work emphasizes performance, reliability and pragmatic architecture.</p>
+
+      <div class="meta-grid">
+        <div>
+          <strong>Core stack</strong>
+          <div>JavaScript (React/Next) • Laravel (PHP)</div>
+        </div>
+        <div>
+          <strong>Focus</strong>
+          <div>REST APIs • DevOps • Caching & optimization</div>
+        </div>
+        <div>
+          <strong>Learning</strong>
+          <div>C++ • Systems & OOP</div>
+        </div>
       </div>
-      <nav class="nav">
-        <a href="https://github.com/silassdev" target="_blank" rel="noopener">GitHub</a>
-        <a href="#about-top">About</a>
-        <a href="#stack">Stack</a>
-        <a href="#contact">Contact</a>
-      </nav>
+
     </div>
-  </header>
-  <section id="about-top" class="about-top">
-    <div class="container">
-      <h2>Hola!</h2>
-      <p class="about-lead">
-        I'm Silas Tyokaha — I build polished interfaces, reliable APIs, web applications and experiment with AI tooling and generative techniques.
-        My core stack is JavaScript and Laravel. I integrate AI and build robust, RESTful APIs while practicing DevOps, caching and performance optimizations to reduce memory use and improve scalability.
-        I'm currently learning C++ and Object-Oriented Programming
-      </p>
+
+    <aside class="hero-right" aria-hidden="false">
+      <div style="border:1px solid #111;border-radius:12px;padding:18px;min-height:120px;display:flex;align-items:center;justify-content:center">
+        <div style="text-align:center">
+          <div style="font-weight:700;font-size:28px;letter-spacing:0.02em">ST</div>
+          <div style="font-size:13px;color:#555;margin-top:6px">No image — text-first portfolio</div>
+        </div>
+      </div>
+    </aside>
+  </section>
+
+  <section id="about" class="section">
+    <h3>About</h3>
+    <p>I build polished interfaces, reliable APIs and experiment with generative AI to automate workflows. I prioritize maintainable code, measurable performance gains and secure deployments.</p>
+  </section>
+
+  <section id="stack" class="section">
+    <h3>Stack & Languages</h3>
+    <div class="chips">
+      <span class="chip">JavaScript (ES6+)</span>
+      <span class="chip">TypeScript</span>
+      <span class="chip">React / Next.js</span>
+      <span class="chip">Laravel (PHP)</span>
+      <span class="chip">MySQL / PostgreSQL</span>
+      <span class="chip">Node.js</span>
+      <span class="chip">Tailwind CSS</span>
+      <span class="chip">OpenAI API</span>
     </div>
   </section>
 
-  <main>
-    <section class="hero container" aria-labelledby="hero-title">
-      <div class="hero-left">
-        <p class="lead">
-          Below is a quick overview of my journey, stack and tools.
-        </p>
+  <section id="concepts" class="section">
+    <h3>Core practices</h3>
+    <ul>
+      <li>RESTful design, role-based access and secure auth flows</li>
+      <li>Performance: page caching, server tuning, memory optimizations</li>
+      <li>CI/CD and deployment workflows</li>
+      <li>Testing, error handling and security best practices</li>
+      <li>LLM/AI integration patterns and prompt pipelines</li>
+    </ul>
+  </section>
 
+  <section id="contact" class="section footer-section">
+    <h3>Contact</h3>
+    <p>Projects and code: <a href="https://github.com/silassdev" target="_blank" rel="noopener">github.com/silassdev</a></p>
+    <p>Company: <a href="https://allpilar.xyz" target="_blank" rel="noopener">allpilar.xyz</a></p>
+  </section>
+</main>
 
-        <div class="meta-grid">
-          <div>
-            <strong>Core stack</strong>
-            <div>JavaScript & Laravel</div>
-          </div>
-          <div>
-            <strong>Learning</strong>
-            <div>C++</div>
-          </div>
-          <div>
-            <strong>Focus</strong>
-            <div>AI integration • RESTful APIs • DevOps • Caching & optimization</div>
-          </div>
-        </div>
-      </div>
+<footer class="site-footer">
+  <small>© <span id="year"></span> Silas — <a href="https://silassdev.github.io/" target="_blank" rel="noopener">silassdev.github.io</a></small>
+</footer>
 
-      <div class="hero-right" aria-hidden="false">
-        <div class="image-frame" id="imageFrame">
-        <img id="profileImage" src="IMG_8314.jpeg" alt="Silas Tyokaha — profile" />         
-          <div class="image-fallback">No image. Upload to preview.</div>
-        </div>
-      </div>
-    </section>
+  </div>  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-    <section id="stack" class="section container">
-      <h3>Stack & Languages</h3>
-
-      <div class="chips-grid">
-        <div class="chip-group">
-          <h4>Languages</h4>
-          <div class="chips">
-            <span class="chip">JavaScript (ES6+)</span>
-            <span class="chip">TypeScript</span>
-            <span class="chip">PHP</span>
-            <span class="chip">C++</span>
-            <span class="chip">HTML & CSS</span>
-            <span class="chip">SQL</span>
-            <span class="chip">Python</span>
-            <span class="chip">Java</span>
-          </div>
-        </div>
-
-        <div class="chip-group">
-          <h4>Frameworks / Libraries</h4>
-          <div class="chips">
-            <span class="chip">React</span>
-            <span class="chip">Next.js </span>
-            <span class="chip">Laravel (Blade + Livewire)</span>
-            <span class="chip">React Native</span>
-            <span class="chip">Tailwind CSS</span>
-            <span class="chip">Spring Boot</span>
-          </div>
-        </div>
-
-        <div class="chip-group">
-          <h4>Databases</h4>
-          <div class="chips">
-            <span class="chip">MySQL</span>
-            <span class="chip">PostgreSQL</span>
-            <span class="chip">MongoDB</span>
-          </div>
-        </div>
-
-        <div class="chip-group">
-          <h4>Tools / Tech</h4>
-          <div class="chips">
-            <span class="chip">Node.js</span>
-            <span class="chip">Composer</span>
-            <span class="chip">npm</span>
-            <span class="chip">Git / GitHub</span>
-            <span class="chip">cPanel / Vercel</span>
-            <span class="chip">OpenAI API</span>
-            <span class="chip">Upload / storage tooling</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="concepts" class="section container">
-      <h3>Core concepts & practices</h3>
-      <ul class="concept-list">
-        <li>CRUD design & REST patterns</li>
-        <li>Authentication & authorization — token flows & role-based access</li>
-        <li>Responsive design, accessibility, state management</li>
-        <li>File/image/video management and streaming</li>
-        <li>Caching & performance: page cache, server optimizations</li>
-        <li>Deployment workflows: cPanel, GitHub → deploy</li>
-        <li>Database migrations & schema design</li>
-        <li>Testing, error handling, and security best practices</li>
-        <li>LLM / AI integration patterns (prompting, pipelines)</li>
-      </ul>
-    </section>
-
-    <section id="contact" class="section container footer-section">
-      <h3>Contact</h3>
-      <p>
-        Find my code and projects on <a href="https://github.com/silassdev" target="_blank" rel="noopener">GitHub</a>.      </p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <small>© <span id="year"></span> Silas — <a href="https://silassdev.github.io/" target="_blank" rel="noopener">silassdev.github.io</a></small>
-    </div>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    // smooth in-page navigation
+    document.querySelectorAll('a[href^="#"]').forEach(a => {
+      a.addEventListener('click', e => {
+        e.preventDefault();
+        const id = a.getAttribute('href').slice(1);
+        const el = document.getElementById(id);
+        if(el) el.scrollIntoView({behavior:'smooth', block:'start'});
+      });
+    });
+  </script></body>
 </html>
