--- a/index.html
+++ b/index.html
@@ -69,14 +69,7 @@
 
 <main class="app">
   <section class="panel" aria-labelledby="app-title">
-    <h2 id="app-title" class="headline">Developer App — Clear overview</h2>
-    <p class="sub">A compact, app-style portfolio that surfaces core info quickly. No images — text-first, mobile-first.</p>
-
-    <div class="app-nav" role="tablist" aria-label="App sections">
-      <button class="tab" role="tab" aria-selected="true" data-tab="overview">Overview</button>
-      <button class="tab" role="tab" aria-selected="false" data-tab="projects">Projects</button>
-      <button class="tab" role="tab" aria-selected="false" data-tab="contact">Contact</button>
-    </div>
+    <h2 id="app-title" class="headline">Developer</h2>
 
     <div id="overview" class="app-panel" role="tabpanel">
       <h3 style="margin:0 0 8px 0">What I build</h3>
@@ -120,7 +113,7 @@
 
     <div id="contact" class="app-panel" role="tabpanel" hidden>
       <h3 style="margin:0 0 8px 0">Contact</h3>
-      <p style="margin:0 0 8px 0;color:#444">Find code and projects: <a href="https://github.com/silassdev" target="_blank" rel="noopener">github.com/silassdev</a></p>
+      <p style="margin:0 0 8px 0;color:#444">Find projects on: <a href="https://github.com/silassdev" target="_blank" rel="noopener">github.com/silassdev</a></p>
       <p style="margin:0 0 8px 0;color:#444">Company/Work: <a href="https://allpilar.xyz" target="_blank" rel="noopener">allpilar.xyz</a></p>
       <p style="margin:0">Email: use the contact form on allpilar.xyz or link via GitHub profile.</p>
     </div>
@@ -128,10 +121,6 @@
   </section>
 
   <aside class="panel" aria-labelledby="aside-title">
-    <div class="aside-hero">
-      <div class="logo">ST</div>
-      <p style="margin-top:8px;color:#444">Text-first, minimal portfolio</p>
-    </div>
 
     <div class="meta" aria-hidden="false">
       <div class="badge">JavaScript</div>
@@ -151,7 +140,7 @@
 </main>
 
 <footer>
-  <small>© <span id="year"></span> Silas — minimal app-style portfolio</small>
+  <small>© <span id="year"></span> Silas</small>
 </footer>
 
   </div>  <script>
